# vaultware

./: .gitignore  .gitmodules  CMakeLists.txt  GeneratePasswordPanel.cpp  README.md  Vaultware.sln  Vaultware.vcxproj  Vaultware.vcxproj.filters  main.cpp
include/: AddCredentialPanel.hpp  Credential.hpp  CredentialsGrid.hpp  GeneratePasswordPanel.hpp  Log.h  LoginPanel.hpp  PasswordGenerator.hpp  RNG.hpp  User.hpp  Vault.hpp
src/: AddCredentialPanel.cpp  Credential.cpp  Credential.hpp  CredentialsGrid.cpp  GeneratePasswordPanel.cpp  LoginPanel.cpp  RNG.cpp  Vault.cpp  main.cpp
vaultGen/: vaultGen.cpp  vaultGen.vcxproj
x64/Debug/: Vaultware.exe.recipe  Vaultware.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Vaultware.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vaultware.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
